--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_BASE_URL = http://naserehab-001-site1.mtempurl.com
-VITE_BASE_URL = http://localhost:5000
+VITE_BASE_URL = https://naserehab-001-site1.mtempurl.com
+# VITE_BASE_URL = http://localhost:5000
